--- a/tasks/calendar.yaml
+++ b/tasks/calendar.yaml
@@ -28,11 +28,12 @@
         repo: "deb-src [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/nodesource.asc] https://deb.nodesource.com/node_18.x {{ ansible_distribution_release }} main"
         state: present
 
-- name: Install acl, git and node
+- name: Install acl, libcap2-bin, git and node
   become: yes
   ansible.builtin.package:
     name:
       - acl # needed to become the calendar user
+      - libcap2-bin # to set the capabilities for the node binary
       - git
       - nodejs
     state: latest
@@ -60,11 +61,20 @@
   community.general.npm:
     path: /opt/calendar/source
 
+- name: Allow the node binary to listen on low ports
+  become: yes
+  ansible.builtin.shell: setcap 'cap_net_bind_service=+ep' /usr/bin/node
+
 - name: Copy the systemd service
   become: yes
   ansible.builtin.template:
     src: files/calendar/calendar.service.j2
     dest: /etc/systemd/system/calendar.service
+
+- name: Reload the systemd daemon
+  become: yes
+  ansible.builtin.service:
+    daemon_reload: true
 
 - name: Restart and enable the calendar service
   become: yes
