--- a/install.yaml
+++ b/install.yaml
@@ -19,3 +19,9 @@
   tasks: 
     - name: Setup bot
       ansible.builtin.import_tasks: tasks/bot.yaml
+
+- name: GoBot
+  hosts: gobot
+  tasks:
+    - name: Setup GoBot
+      ansible.builtin.import_tasks: tasks/gobot.yaml
