--- a/tasks/bot.yaml
+++ b/tasks/bot.yaml
@@ -1,29 +1,13 @@
-- name: Add the NodeSource apt repository
-  become: yes
-  block:
-    - name: Download the NodeSource key
-      ansible.builtin.get_url:
-        url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
-        dest: /etc/apt/trusted.gpg.d/nodesource.asc
+- name: Define Go Version
+  ansible.builtin.set_fact:
+    go_version: 1.20.2
 
-    - name: Add the NodeSource repository
-      ansible.builtin.apt_repository:
-        repo: "deb [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/nodesource.asc] https://deb.nodesource.com/node_18.x {{ ansible_distribution_release }} main"
-        state: present
-
-    - name: Add the NodeSource src repository
-      ansible.builtin.apt_repository:
-        repo: "deb-src [arch=amd64 signed-by=/etc/apt/trusted.gpg.d/nodesource.asc] https://deb.nodesource.com/node_18.x {{ ansible_distribution_release }} main"
-        state: present
-
-- name: Install acl, libcap2-bin, git and node
+- name: Install acl, git
   become: yes
   ansible.builtin.package:
     name:
       - acl 
-      - libcap2-bin # to set the capabilities for the node binary
       - git
-      - nodejs
     state: latest
     update_cache: yes
 
@@ -36,31 +20,44 @@
     home: /opt/bot
     shell: /usr/sbin/nologin
 
+- name: Check if go is installed
+  become: yes
+  ansible.builtin.stat:
+    path: /opt/bot/go
+  register: go_installed
+
+- name: Install Go Binary
+  become: yes
+  become_user: bot
+  ansible.builtin.unarchive:
+    src: "https://go.dev/dl/go{{ go_version }}.linux-amd64.tar.gz"
+    dest: /opt/bot
+    remote_src: yes
+  when: not go_installed.stat.exists
+
 - name: Clone a github repository
   become: yes
   become_user: bot
   ansible.builtin.git:
-    repo: 'https://github.com/csunibo/informabot.git'
+    repo: 'https://github.com/csunibo/informabot'
+    version: bot-on-the-go
     dest: /opt/bot/source
-
-- name: Install packages with npm
-  become: yes
-  become_user: bot 
-  community.general.npm:
-    path: /opt/bot/source
-
-- name: Allow the node binary to listen on low ports
-  become: yes
-  ansible.builtin.shell: setcap 'cap_net_bind_service=+ep' /usr/bin/node
 
 - name: Read the bot token
   ansible.builtin.set_fact:
     bot_token: "{{ lookup('file', 'passwords/bot_token') }}"
 
+- name: Build GoBot
+  become: yes
+  become_user: bot
+  ansible.builtin.shell:
+    chdir: /opt/bot/source
+    cmd: /opt/bot/go/bin/go build -o /opt/bot/bot main.go
+
 - name: Copy the systemd service
   become: yes
   ansible.builtin.template:
-    src: files/bot/bot.service.j2
+    src: files/gobot/bot.service.j2
     dest: /etc/systemd/system/bot.service
 
 - name: Reload the systemd daemon
@@ -72,5 +69,5 @@
   become: yes
   ansible.builtin.service:
     name: bot 
-    state: restarted
+    state: started 
     enabled: yes
