--- a/install.yaml
+++ b/install.yaml
@@ -32,3 +32,11 @@
   hosts: csunibo
   tasks:
     - ansible.builtin.import_tasks: tasks/csunibo.yaml
+    - name: Setup bot
+      ansible.builtin.import_tasks: tasks/bot.yaml
+
+- name: Setup CSGitBot
+  hosts: csgitbot
+  tasks:
+    - name: Setup csgitbot
+      ansible.builtin.import_tasks: tasks/csgitbot.yaml
