--- a/files/csgitbot/bot.service
+++ b/files/csgitbot/bot.service
@@ -7,7 +7,7 @@ After=network.target
 [Service]
 User=bot
 Group=bot
-ExecStart=cd /opt/bot/source && /opt/bot/.local/bin/poetry run start
+ExecStart=/opt/bot/.local/bin/poetry run start
 WorkingDirectory=/opt/bot/source
 ReadWriteDirectories=/opt/bot/source
 
