--- a/tasks/dynamik.yaml
+++ b/tasks/dynamik.yaml
@@ -40,6 +40,10 @@
     state: latest
     update_cache: true
 
+- name: Allow the node binary to listen on low ports
+  become: true
+  ansible.builtin.shell: setcap 'cap_net_bind_service=+ep' /usr/bin/node
+
 - name: Create the dynamik user
   become: true
   ansible.builtin.user:
@@ -60,37 +64,28 @@
 - name: Install pnpm
   become: true
   become_user: dynamik
-  ansible.builtin.shell: | 
+  ansible.builtin.shell: |
     curl -fsSL https://get.pnpm.io/install.sh | sh -
 
-- name: Install adapter for node
+- name: Install the dependencies with pnpm
   become: true
   become_user: dynamik
   ansible.builtin.shell: |
-    /opt/dynamik/.local/share/pnpm/pnpm i -D @sveltejs/adapter-node
+    /opt/dynamik/.local/share/pnpm/pnpm install
   args:
     chdir: /opt/dynamik/source
     executable: /bin/bash
-
-- name: Copy the modified version of svelte.config for node deploy
-  become: true
-  become_user: dynamik
-  ansible.builtin.copy:
-    src: files/dynamik/svelte.config.js
-    dest: /opt/dynamik/source/svelte.config.js
 
 - name: Build with pnpm
   become: true
   become_user: dynamik
   ansible.builtin.shell: |
     /opt/dynamik/.local/share/pnpm/pnpm run build
+  environment:
+    CSUNIBO_DEPLOY: "true"
   args:
     chdir: /opt/dynamik/source
     executable: /bin/bash
-
-- name: Allow the node binary to listen on low ports
-  become: true
-  ansible.builtin.shell: setcap 'cap_net_bind_service=+ep' /usr/bin/node
 
 - name: Copy the systemd service
   become: true
