--- a/tasks/dynamik.yaml
+++ b/tasks/dynamik.yaml
@@ -83,6 +83,7 @@
     /opt/dynamik/.local/share/pnpm/pnpm run build
   environment:
     CSUNIBO_DEPLOY: "true"
+    VITE_UPLD_URL: "0.0.0.0"
   args:
     chdir: /opt/dynamik/source
     executable: /bin/bash
