added csunibo wesite

--- a/install.yaml
+++ b/install.yaml
@@ -27,3 +27,8 @@
   hosts: fileseeker
   tasks:
     - ansible.builtin.import_tasks: tasks/fileseeker.yaml
+
+- name: Setup csunibo
+  hosts: csunibo
+  tasks:
+    - ansible.builtin.import_tasks: tasks/csunibo.yaml
