--- a/tasks/security.yaml
+++ b/tasks/security.yaml
@@ -27,7 +27,7 @@
   become: yes
   ansible.builtin.service:
     name: "{{ item }}"
-    state: started
+    state: restarted
     enabled: yes
   with_items:
     - fail2ban
