--- a/tasks/csgitbot.yaml
+++ b/tasks/csgitbot.yaml
@@ -1,5 +1,5 @@
 - name: Install acl, git, python3-pip and python3-venv
-  become: yes
+  become: true
   ansible.builtin.package:
     name:
       - acl 
@@ -7,10 +7,10 @@
       - python3-pip
       - python3-venv
     state: latest
-    update_cache: yes
+    update_cache: true
 
 - name: Create the bot user
-  become: yes
+  become: true
   ansible.builtin.user:
     state: present
     system: true
@@ -18,14 +18,14 @@
     home: /opt/bot
     shell: /usr/sbin/nologin
 
-- name: Clone a github repository
-  become: yes
+- name: Clone the github repository
+  become: true
   become_user: bot
   ansible.builtin.git:
     repo: "https://github.com/csunibo/csgitbot"
     dest: /opt/bot/source
     version: main
-    force: yes
+    force: true
   register: git_result
 
 - name: Check if virtual environment exists
@@ -34,20 +34,20 @@
   register: venv_result
 
 - name: Create a python virtual environment
-  become: yes
+  become: true
   become_user: bot
   ansible.builtin.command:
     cmd: python3 -m venv /opt/bot/venv
   when: not venv_result.stat.exists
 
 - name: Upgrade pip inside virtual environment
-  become: yes
+  become: true
   become_user: bot
   ansible.builtin.command:
     cmd: /opt/bot/venv/bin/pip install --upgrade pip
 
 - name: Install python dependencies
-  become: yes
+  become: true
   become_user: bot
   ansible.builtin.pip:
     name: /opt/bot/source/requirements.txt
@@ -56,14 +56,14 @@
     extra_args: -r
 
 - name: Substitute repo owner line in config.init.py
-  become: yes
+  become: true
   ansible.builtin.lineinfile:
     path: /opt/bot/source/config.ini
     regexp: '^repo_owner ='
     line: 'repo_owner = csunibo'
 
 - name: Substitute redirect uri line in config.init.py
-  become: yes
+  become: true
   ansible.builtin.lineinfile:
     path: /opt/bot/source/config.ini
     regexp: '^redirect_uri ='
@@ -76,24 +76,24 @@
     client_secret: "{{ lookup('file', 'passwords/csgitbot_secret') }}"
 
 - name: Copy the systemd service
-  become: yes
+  become: true
   ansible.builtin.copy:
     src: files/csgitbot/bot.service
     dest: /etc/systemd/system/bot.service
 
 - name: Copy the env file
-  become: yes
+  become: true
   ansible.builtin.template:
     src: files/csgitbot/env.j2
     dest: /opt/bot/source/.env
 
 - name: Reload the systemd daemon
-  become: yes
+  become: true
   ansible.builtin.service:
     daemon_reload: true
 
 - name: Start and enable the bot service
-  become: yes
+  become: true
   ansible.builtin.service:
     name: bot 
     state: started 
@@ -101,7 +101,7 @@
   when: not git_result.changed
 
 - name: Restart and enable the bot service
-  become: yes
+  become: true
   ansible.builtin.service:
     name: bot 
     state: restarted 
