--- a/tasks/csgitbot.yaml
+++ b/tasks/csgitbot.yaml
@@ -55,19 +55,26 @@
     virtualenv: /opt/bot/venv
     extra_args: -r
 
-- name: Substitute repo owner line in config.init.py
+- name: Substitute repo owner line in config.ini
   become: true
   ansible.builtin.lineinfile:
     path: /opt/bot/source/config.ini
     regexp: '^repo_owner ='
     line: 'repo_owner = csunibo'
 
-- name: Substitute redirect uri line in config.init.py
+- name: Substitute redirect uri line in config.ini
   become: true
   ansible.builtin.lineinfile:
     path: /opt/bot/source/config.ini
     regexp: '^redirect_uri ='
     line: 'redirect_uri = http://{{ ansible_default_ipv4.address }}:8000/oauth/redirect'
+
+- name: Substitute environment line in config.ini
+  become: true
+  ansible.builtin.lineinfile:
+    path: /opt/bot/source/config.ini
+    regexp: '^environment ='
+    line: 'environment = production'
 
 - name: Read the bot secrets
   ansible.builtin.set_fact:
