--- a/tasks/homework.yaml
+++ b/tasks/homework.yaml
@@ -69,14 +69,8 @@
 - name: Copy systemd server service
   become: true
   ansible.builtin.template:
-    src: files/homework/homework-server.service.j2
-    dest: /etc/systemd/system/homework-server.service
-
-- name: Copy systemd client service
-  become: true
-  ansible.builtin.template:
-    src: files/homework/homework-client.service.j2
-    dest: /etc/systemd/system/homework-client.service
+    src: files/homework/homework.service.j2
+    dest: /etc/systemd/system/homework.service
 
 - name: Reload the systemd daemon
   become: true
@@ -86,14 +80,7 @@
 - name: Restart and enable the the server
   become: true
   ansible.builtin.service:
-    name: homework-server 
-    state: restarted 
-    enabled: true
-
-- name: Restart and enable the the client
-  become: true
-  ansible.builtin.service:
-    name: homework-client
+    name: homework
     state: restarted 
     enabled: true
 
@@ -103,12 +90,4 @@
     rule: allow
     from_ip: "{{ http_proxy }}"
     port: 3000
-    proto: tcp
-
-- name: Ufw allow 3001 from proxy
-  become: true
-  community.general.ufw:
-    rule: allow
-    from_ip: "{{ http_proxy }}"
-    port: 3001
     proto: tcp
