--- a/install.yaml
+++ b/install.yaml
@@ -1,12 +1,12 @@
 ---
-- name: Security and init setup
-  hosts: all
-  gather_facts: no
-  tasks:
-    - name: Change ssh port
-      ansible.builtin.import_tasks: tasks/ssh.yaml
-    - name: Ufw
-      ansible.builtin.import_tasks: tasks/ufw.yaml
+# - name: Security and init setup
+#   hosts: all
+#   gather_facts: no
+#   tasks:
+#     - name: Change ssh port
+#       ansible.builtin.import_tasks: tasks/ssh.yaml
+#     - name: Ufw
+#       ansible.builtin.import_tasks: tasks/ufw.yaml
 
 - name: Setup calendar
   hosts: calendar
@@ -22,6 +22,11 @@
   hosts: dynamik
   tasks:
     - ansible.builtin.import_tasks: tasks/dynamik.yaml
+
+- name: Setup dynamik TMP
+  hosts: dynamik-tmp
+  tasks:
+    - ansible.builtin.import_tasks: tasks/dynamik-tmp.yaml
 
 - name: Setup fileseeker
   hosts: fileseeker
